--- a/_pages/publication_overview.html
+++ b/_pages/publication_overview.html
@@ -5,13 +5,20 @@ classes: fullwide
 author_profile: false
 ---
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script defer src="{{ '/js/fontawesome.all.min.js' | relative_url }}"></script>
-<script src="{{ '/js/index.js' | relative_url }}"></script>
-<script src="{{ site.baseurl }}{% link js/copy_to_clipboard.js %}"></script>
-<script>
-  document.getElementById("citation_block").innerHTML = formateCitationHTML("{{page.citation}}");
-</script>
+<head>
+    <!-- <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{ page.title }}</title> -->
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/bulma.min.css">
+    <link rel="stylesheet" href="/assets/css/bulma-carousel.min.css">
+    <link rel="stylesheet" href="/assets/css/bulma-slider.min.css">
+    <link rel="stylesheet" href="/assets/css/fontawesome.all.min.css">
+    <link rel="stylesheet" href="/assets://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+    <link rel="stylesheet" href="/assets/css/slider-component.css">
+    <link rel="stylesheet" href="/assets/css/index.css">
+  </head>
 
 <section class="section">
     <div class="container is-max-desktop">
