added image-slider option

--- a/_publications/dnls_covs/content.html
+++ b/_publications/dnls_covs/content.html
@@ -136,7 +136,7 @@
               <p class="content has-text-justified">
                 <i><b>Visual Odometry Results.</b> Rotation and translation error using KLT keypoints.</i>
                 <br><br>
-                The tables show the average results on the test set over 5 runs for SuperPoint and KLT tracks on KITTI, respectively. We show additional results in the supplementary material. Our methods consistently perform the best over all sequences, with the self-supervised being on par with our supervised training. Compared to its non-probabilistic counterpart NEC-LS, our method improves RPE<sub>*1*</sub> by 7% and 13% and the RPE<sub>*n*</sub> by 37% and 23% for different keypoint detectors on unseen data. Furthermore, it also improves upon methods that use weighting, like weighted NEC-LS and the non-learned covariances for the PNEC, significantly.
+                The tables show the average results on the test set over 5 runs for SuperPoint and KLT tracks on KITTI, respectively. We show additional results in the supplementary material. Our methods consistently perform the best over all sequences, with the self-supervised being on par with our supervised training. Compared to its non-probabilistic counterpart NEC-LS, our method improves $\text{RPE}_1$ by 7% and 13% and the $\text{RPE}_n$ by 37% and 23% for different keypoint detectors on unseen data. Furthermore, it also improves upon methods that use weighting, like weighted NEC-LS and the non-learned covariances for the PNEC, significantly.
               </p>
           </p>
         </div>
