--- a/_publications/lightspeed/content.html
+++ b/_publications/lightspeed/content.html
@@ -1,4 +1,4 @@
-<section class="hero teaser">
+<!-- <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video width="100%" autoplay muted loop>
@@ -10,7 +10,7 @@
       </p>
     </div>
   </div>
-</section>
+</section> -->
 
 
 <section class="section hero is-light">
@@ -20,7 +20,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-              We propose a differentiable nonlinear least squares framework to account for uncertainty in relative pose estimation from feature correspondences. Specifically, we introduce a symmetric version of the probabilistic normal epipolar constraint, and an approach to estimate the covariance of feature positions by differentiating through the camera pose estimation procedure. We evaluate our approach on synthetic, as well as the KITTI and EuRoC real-world datasets. On the synthetic dataset, we confirm that our learned covariances accurately approximate the true noise distribution. In real world experiments, we find that our approach consistently outperforms state-of-the-art non-probabilistic and probabilistic approaches, regardless of the feature extraction algorithm of choice.
+              TBD.
           </p>
         </div>
       </div>
@@ -28,7 +28,7 @@
   </div>
 </section>
 
-<section class="hero is-small">
+<!-- <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <div class="columns is-centered has-text-centered">
@@ -143,4 +143,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
