--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -22,7 +22,8 @@ author_profile: false
         <a href="/assets/cv_short.pdf" target="_blank">Download my CV</a>
     </p>
     <div class="hero-body">
-        <img src="/assets/cv_short.pdf" width="100%" />
+        <img src="/assets/cv_short_0.png" width="50%" />
+        <img src="/assets/cv_short_1.png" width="50%" />
     </div>
 </section>
 
